Added ability to edit gym classes

--- a/templates/gym_classes/index.html
+++ b/templates/gym_classes/index.html
@@ -19,7 +19,7 @@
                     <p>{{gym_class.type}} - {{gym_class.time}} - {{gym_class.date}}</p>
                 </div>
                 <div>
-                    <form action="">
+                    <form action="/gym_classes/{{gym_class.id}}/edit">
                         <button class="edit-button">
                             Edit
                         </button>
