Added ability to delete gym classes

--- a/templates/gym_classes/show.html
+++ b/templates/gym_classes/show.html
@@ -17,7 +17,7 @@
                     Edit Class
                 </button>
             </form>
-            <form action="">
+            <form action="/gym_classes/{{gym_class.id}}/delete" method="POST">
                 <button class="delete-button">
                     Delete Class
                 </button>
