--- a/templates/gym_classes/show.html
+++ b/templates/gym_classes/show.html
@@ -14,6 +14,9 @@
             {% for member in members %}
                 {{member.first_name}} {{member.last_name}}
             {% endfor %}
+            {% if members == [] %}
+            None
+            {% endif %}
             </p>
         </div>
         <div class="show-buttons">
